# PVE-Hardware-Monitor

./: README.md  api.py  install.sh  pyproject.toml
examples/: config.example.json
src/pvehw/: __init__.py  cluster.py  config.py  types.py
src/pvehw/api/: __init__.py  server.py  websocket.py
src/pvehw/dashboard/: index.html
src/pvehw/sensors/: __init__.py  base.py  battery.py  ec.py  hwmon.py  ipmi.py  system.py
tests/: test_pvehw.py
