[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvehw"
version = "2.0.0"
description = "Real-time hardware monitoring dashboard for Proxmox VE"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PVE Hardware Monitor Contributors"}
]
keywords = ["proxmox", "hardware", "monitoring", "fan", "temperature", "ipmi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
cluster = [
    "aiohttp>=3.8.0",
]
tls = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://github.com/AviFR-dev/PVE-Hardware-Monitor"
Documentation = "https://github.com/AviFR-dev/PVE-Hardware-Monitor#readme"
Repository = "https://github.com/AviFR-dev/PVE-Hardware-Monitor"
Issues = "https://github.com/AviFR-dev/PVE-Hardware-Monitor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pvehw = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.coverage.run]
source = ["src/pvehw"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
